# pcma

./: .gitignore  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile.am  README.asciidoc  ROADMAP  ROADMAP.asciidoc  THANKS  build.sh  configure.ac  configure.in  prepare.sh
debian/: changelog  control  pcma.pcmad.init  pcma.pcmad.upstart  rules
examples/: client.py
init/: Makefile.am  pcmad.lsb.in  pcmad.service.in  pcmad.upstart.in
man/: Makefile.am  pcma.5.asciidoc  pcmac.1.asciidoc  pcmad.1.asciidoc
src/: Makefile.am  client.c  client.h  common.c  common.h  daemon.c  daemon.h  macros.h  mlockfile.c  mlockfile.h  pcmac.c  pcmac.h  pcmad.c  pcmad.h  server.c  server.h
tests/: suite.rb
