AC_INIT([pcma], [0.0.1])

AM_INIT_AUTOMAKE

AC_PROG_SED
AM_PROG_CC_C_O
PKG_PROG_PKG_CONFIG

AC_CHECK_PROGS(A2X, a2x)

dnl Needed by a2x
AC_CHECK_PROGS(ASCIIDOC, asciidoc)
AC_CHECK_PROGS(XMLLINT, xmllint)
AC_CHECK_PROGS(XSLTPROC, xsltproc)

AC_HEADER_STDC
PKG_CHECK_MODULES([ZMQ], [libzmq >= 2])
AC_CHECK_LIB(msgpack,msgpack_version)

AC_ARG_WITH([systemdsystemunitdir],
	AS_HELP_STRING([--with-systemdsystemunitdir=DIR], [Directory for systemd service files]),
	[], [with_systemdsystemunitdir=$($PKG_CONFIG --variable=systemdsystemunitdir systemd)])

if test "x$with_systemdsystemunitdir" != xno; then
	AC_SUBST([systemdsystemunitdir], [$with_systemdsystemunitdir])
fi
AM_CONDITIONAL(HAVE_SYSTEMD, [test -n "$with_systemdsystemunitdir" -a "x$with_systemdsystemunitdir" != xno ])

AC_OUTPUT(Makefile src/Makefile man/Makefile init/Makefile)
